# fops

./: .gitignore  LICENSE  README.md  pyproject.toml  version.py
.github/workflows/: release.yml
src/fops/: cli.py  core.py  utils.py
src/fops/commands/: __init__.py  clear_cache.py  create_archive.py  delete_branches.py  delete_cache.py
tests/: smoke_test.py  test_core.py
