[project]
name = "fops"
version = "1.0.4"
description = ""
readme = "README.md"
authors = [
    { name = "oyghen", email = "oyghen@duck.com" }
]
requires-python = ">=3.11"
dependencies = [
    "clsforge>=0.1.2",
    "timeteller>=1.0.0",
    "typer>=0.25.1",
]

[project.scripts]
fops = "fops.cli:app"

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
